# codex-beacon

./: .gitignore  Cargo.toml  README.md  package.json  pnpm-lock.yaml
.codex/: hooks.json
.codex/hooks/: beacon-record-event.py
.github/workflows/: preview.yml  release.yml
.trellis/spec/backend/: directory-structure.md  quality-guidelines.md
.trellis/spec/frontend/: directory-structure.md  quality-guidelines.md  type-safety.md
.trellis/tasks/00-bootstrap-guidelines/: task.json
.trellis/tasks/06-08-06-08-electric-mascot-animations/: task.json
.trellis/tasks/06-08-align-active-codex-task-detection/: check.jsonl  implement.jsonl  prd.md  task.json
.trellis/tasks/06-08-codex-desktop-global-status-source/: check.jsonl  implement.jsonl  prd.md  task.json
.trellis/tasks/06-08-codex-exit-dominates-active-detection/: check.jsonl  implement.jsonl  prd.md  task.json
.trellis/tasks/06-08-codex-hook-status-source/: check.jsonl  implement.jsonl  prd.md  task.json
.trellis/tasks/06-08-fix-hud-layout-drag-motion/: check.jsonl  implement.jsonl  prd.md  task.json
.trellis/tasks/06-08-fix-live-beacon-refresh/: prd.md  task.json
.trellis/tasks/06-08-implement-handoff-hud-redesign/: check.jsonl  prd.md  (+2 more)
apps/desktop-tauri/: README.md  index.html  package.json
apps/desktop-tauri/src-tauri/: Cargo.toml  tauri.conf.json
apps/desktop-tauri/src-tauri/src/: lib.rs  main.rs
core/beacon-core/: Cargo.toml
docs/: architecture-tauri-rust-core.md  release-pipeline.md
themes/electric-mascot/: theme.json
themes/minimal-card/: theme.json
themes/neon-hud/: theme.json
(+25 files in other folders)
