[workspace]
members = [
  "core/beacon-core",
  "apps/desktop-tauri/src-tauri"
]
resolver = "2"

[workspace.package]
edition = "2021"
version = "0.1.0"
license = "MIT"

[workspace.dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
chrono = { version = "0.4", default-features = false, features = ["clock", "serde"] }
beacon-core = { path = "core/beacon-core" }
