[package]
name = "codex-beacon-desktop"
version.workspace = true
description = "Codex Beacon desktop HUD"
authors = ["dev2019zheng"]
edition.workspace = true
license.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "codex_beacon_desktop_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
beacon-core.workspace = true
chrono.workspace = true
tauri = { version = "2", features = ["macos-private-api"] }
tauri-plugin-opener = "2"
serde.workspace = true
serde_json.workspace = true
